[package]
name = "mysite"
version = "0.1.0"
edition = "2024"

[dependencies]
# 框架与运行时
boluo = { git = "https://github.com/dakai-chen/boluo", branch = "body-downcast", features = [
    "static-file",
] }
boluo-extra = { git = "https://github.com/dakai-chen/boluo-extra", features = [
    "cookie",
] }
tokio = { version = "1", features = ["full"] }

# 序列化和反序列化
serde = { version = "1", features = ["derive"] }
serde_with = "3.15.1"
serde_json = "1"
humantime-serde = "1"

# 环境与配置
config = "0.15.18"
dotenvy = "0.15.7"

# 错误处理
anyhow = "1"
thiserror = "2"

# 日志与追踪
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "local-time",
    "env-filter",
] }
tracing-appender = "0.2.4"

# 时间处理
jiff = "0.2.16"
chrono = "0.4.42"
time = "0.3"

# 数据库
sqlx = { version = "=0.9.0-alpha.1", features = [
    "runtime-tokio",
    "sqlite",
    "time",
] }

# 加密与安全
sha2 = "0.10.9"
argon2 = "0.5.3"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
totp-rs = { version = "5.7.0", features = ["otpauth"] }

# 定时任务
tokio-cron-scheduler = "0.15.1"

# 页面渲染
tera = "1.20.1"
comrak = { version = "0.50.0", features = ["syntect", "shortcodes"] }
lol_html = "2.7.1"
syntect = "5.3.0"

# 通用工具
futures-util = "0.3.31"
uuid = { version = "1.18.1", features = ["v4"] }
bytesize = { version = "2.2.0", features = ["serde"] }
mime = "0.3.17"
urlencoding = "2.1.3"
sysinfo = "0.37.2"
regex = "1.12.2"
human_format = "1.2.1"

[patch.crates-io]
boluo-core = { git = "https://github.com/dakai-chen/boluo", branch = "body-downcast" }
